--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <b>Lingyu Zhou</b>
 <hr>
+Cornell Univeristy
+<br>
+522 Dryden Rd.
+<br>
+<a href="instagram.com/voieasuivre">Instagram</a>
+<br>
+<a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a>
 lz568[at]cornell[dot]edu
+<br>
