--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <br>
 522 Dryden Rd.
 <br>
-<a href="instagram.com/voieasuivre">Instagram</a>
+<a href="https://instagram.com/voieasuivre">Instagram</a>
 <br>
 <a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a>
 <br>
