--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <b>Lingyu Zhou</b>
 <hr>
-<a href="https://cornell.edu">Cornell University</a>
+<a href="https://khentmt.com">KH Entertainment</a> | <a href="https://wisc.edu">UW-Madison</a> | <a href="https://cornell.edu">Cornell University</a>
 <br>
 522 Dryden Rd.
 <br>
