--- a/index.html
+++ b/index.html
@@ -9,3 +9,5 @@
 <a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a>
 <br>
 lz568[at]cornell[dot]edu
+<hr>
+A graph-based website can be accessed <a href="https://zlybox.com">here</a>. Or simply visit zly1.com
