--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
 <br>
 lz568[at]cornell[dot]edu
 <hr>
-A graph-based website can be accessed <a href="https://zlybox.com">here</a>. Or simply visit zly1.com
+This website will be deprecated in the future. Another graph-based website can be accessed <a href="https://zlybox.com">here</a>.
