--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <br>
 522 Dryden Rd.
 <br>
-<a href="https://instagram.com/voieasuivre">Instagram</a>
+<a href="https://github.com/xolyn">Github</a>
 <br>
-<a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a>
+<a href="https://instagram.com/voieasuivre">Instagram</a> <a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a> <a href="https://www.youtube.com/channel/UCBAWwHCV2jN0RKls9WMepLQ">Youtube</a>
 <br>
 lz568[at]cornell[dot]edu
 <hr>
