--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@ lz568[at]cornell[dot]edu
 <hr>
 This website will be deprecated in the future. Another graph-based website can be accessed <a href="https://zlybox.com">here</a>.
 <hr>
-<script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_Hn5KVSUvMKb0DlqWlil3k7JISD3slPy4QQCFYsbZT0"></script>
+<!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_Hn5KVSUvMKb0DlqWlil3k7JISD3slPy4QQCFYsbZT0"></script> -->
