--- a/fkpf.html
+++ b/fkpf.html
@@ -1,4 +1,5 @@
-<h3><a style="font-size:30px" href="https://xolyn.github.io/">&#x2302;</a>  Cyber Puppets: Dancing with Shadows in the Digital Masquerade</h3>
+<h1><a  href="https://xolyn.github.io/">&#x2302;</a>  Cyber Puppets: Dancing with Shadows in the Digital Masquerade</h1>
+<!-- style="font-size:30px" -->
 <hr>
 In the ever-evolving landscape of the internet, the prevalence of fake identities has surged to staggering proportions, prompting profound reflection on its implications. With the sheer volume of fabricated personas multiplying by the day, the digital realm has become a labyrinth where authenticity often finds itself entangled with deceit. The consequences of this phenomenon extend far beyond mere amusement, as the potential harm is undeniable.
 <br>
@@ -7,7 +8,7 @@ The internet's vast anonymity has provided fertile ground for the cultivation of
 The ramifications of this era of counterfeit identities are as diverse as they are profound, affecting realms as critical as politics, cybersecurity, and personal relationships. The urgency of addressing this issue underscores the importance of promoting online authenticity, ethical behavior, and digital literacy. As we navigate this intricate web of falsehoods, it is imperative to recognize the immense power we hold as both creators and consumers of online identities, urging us to contemplate the responsibility that comes with the freedom to craft our virtual selves.
 <br>
 Have you ever thought that maybe one of your online friends is 100% fictional, and the person you are chatting with may just be an AI that has been trained so well that it easily passed the Turing test?
-If you have no idea what I'm talking about, click <a href="https://www.linkedin.com/in/jkjeon/">here</a> for an inspiration. <small>Find some easter eggs in this page.</small>
+If you have no idea what I'm talking about, click <a href="https://www.linkedin.com/in/jkjeon/">here</a> for inspiration. <small>Find some easter eggs there.</small>
 <hr>
 <br>
 <br>
@@ -42,6 +43,4 @@ If you have no idea what I'm talking about, click <a href="https://www.linkedin.
 <br>
 <br>
 <hr>
-<footer>*This page is entirely AI-generated and purely fictitious. Learn more <a href="https://en.wikipedia.org/wiki/Identity_fraud">here</a>.
-<br>
-Or see another interesting page <a href="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/BJ7O72XZSEI6FDUEYVTTDIQC7M&w=1200">here.</footer>
+<footer>*This page is entirely AI-generated and purely fictitious. See another interesting page <a href="https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/BJ7O72XZSEI6FDUEYVTTDIQC7M&w=1200">here.</footer>
