--- a/fkpf.html
+++ b/fkpf.html
@@ -2,7 +2,7 @@
 <!-- style="font-size:30px" -->
 Or listen to this article <a href="javascript:void(0);" id="playLink" onclick="playAudio()" style="display:inline;">&#9658;</a>
     <a href="javascript:void(0);" id="pauseLink" onclick="pauseAudio()" style="display:none;">&#9646;</a>
-    <audio id="audioPlayer" src="audio.mp3"></audio>
+    <audio id="audioPlayer" src="audio.mp3"></audio> | Length: 1m55s | <small>Reader: AI - Gujarati Lakshmi</small>
 
     <script>
         var audio = document.getElementById("audioPlayer");
