--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<b>Lingyu Zhou</b>
+<h2>Lingyu Zhou</h2>
 <hr>
 <a href="https://khentmt.com">KH Entertainment</a> | <a href="https://wisc.edu">UW-Madison</a> | <a href="https://cornell.edu">Cornell University</a>
 <br>
