--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h2>Lingyu Zhou</h2>
+<h1>Lingyu Zhou</h1>
 <hr>
 <a href="https://khentmt.com">KH Entertainment</a> | <a href="https://wisc.edu">UW-Madison</a> | <a href="https://cornell.edu">Cornell University</a>
 <br>
@@ -10,6 +10,12 @@
 <br>
 lz568[at]cornell[dot]edu
 <hr>
+<h2>Course note</h2>
+<h3>UW-Madison</h3>
+Math535
+<h3>Cornell University</h3>
+STSCI5010
+STSCI5060
 This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
 <hr>
 <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_Hn5KVSUvMKb0DlqWlil3k7JISD3slPy4QQCFYsbZT0"></script> -->
