--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ lz568[at]cornell[dot]edu
 <h3>UW-Madison</h3>
 Math535
 <h3>Cornell University</h3>
-STSCI5010
-STSCI5060
+<a href="https://xolyn.github.com/5010note">STSCI5010</a>
+<a href="https://xolyn.github.com/5060note">STSCI5060</a>
 This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
 <hr>
 <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_Hn5KVSUvMKb0DlqWlil3k7JISD3slPy4QQCFYsbZT0"></script> -->
