--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ lz568[at]cornell[dot]edu
 <hr>
 <h2>Course note</h2>
 <h3>UW-Madison</h3>
-<a href="https//xolyn.github.com/535sp23note">Math535</a>
+<a href="https://xolyn.github.com/535sp23note">Math535</a>
 <h3>Cornell University</h3>
 <a href="https://xolyn.github.com/5010note.md">STSCI5010</a>
 <br>
