--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@ lz568[at]cornell[dot]edu
 <h3>UW-Madison</h3>
 <a href="https://xolyn.github.io/535sp23note">Math535</a>
 <h3>Cornell University</h3>
-<a href="https://xolyn.github.io/5010note.md">STSCI5010</a>
+<a href="https://xolyn.github.io/5010note">STSCI5010</a>
 <br>
-<a href="https://xolyn.github.io/5060note.md">STSCI5060</a>
+<a href="https://xolyn.github.io/5060note">STSCI5060</a>
 <hr>
 This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
 
