--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <br>
 lz568[at]cornell[dot]edu
 <hr>
-<h2>Course note</h2>
-<h3>UW-Madison</h3>
-<a href="https://xolyn.github.io/535sp23note">Math535</a>
-<h3>Cornell University</h3>
-<a href="https://xolyn.github.io/5010note">STSCI5010</a>
+<b>Course notes:</b>
+UW-Madison
 <br>
-<a href="https://xolyn.github.io/5060note">STSCI5060</a>
+<small><a href="https://xolyn.github.io/535sp23note">Math535</a></small>
+Cornell University
+<br>
+<small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small>
 <hr>
 This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
 
