--- a/index.html
+++ b/index.html
@@ -10,15 +10,28 @@
 <br>
 lz568[at]cornell[dot]edu
 <hr>
-<b>Course notes:</b>
+<!-- <b>Course notes:</b>
 <br>
 UW-Madison
 <br>
-<small><a href="https://xolyn.github.io/535sp23note">Math535</a></small>
+<small>Math535</small>: <small><a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>
 <br>
 Cornell University
 <br>
-<small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small>
+<small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
+<b>Course material:</b>
+<br>
+UW-Madison
+<br>
+<ul>
+    <li><small>Math535: <a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>    </li></ul>
+
+Cornell University
+<br>
+<ul>
+    <li> <small>STSCI5010: <a href="https://xolyn.github.io/5010note">Note</a> </small></li> 
+    <li><small>STSCI5060: <a href="https://xolyn.github.io/5060note">Note</a></small></li> 
+</ul>
 <hr>
 This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
 
