--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <br>
 lz568[at]cornell[dot]edu
 <hr>
+
 <!-- <b>Course notes:</b>
 <br>
 UW-Madison
@@ -19,7 +20,10 @@ UW-Madison
 Cornell University
 <br>
 <small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
-<b>Course material:</b>
+<h2>CV</h2>
+<a href="xolyn.github.io/[u]cv_231008.pdf" download>Download</a>
+<hr>
+<h2>Course material:</h2>
 <br>
 UW-Madison
 <br>
