--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ Cornell University
 <br>
 <small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
 <h2>CV</h2>
-<a href="xolyn.github.io/[u]cv_231008.pdf" download>Download</a>
+<a href="[u]cv_231008.pdf" download>Download</a> (3 pages)
 <hr>
 <h2>Course material:</h2>
 <br>
