--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <br>
 522 Dryden Rd.
 <br>
-<a href="https://github.com/xolyn">Github</a>
-<br>
-<a href="https://instagram.com/voieasuivre">Instagram</a> <a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a> <a href="https://www.youtube.com/channel/UCBAWwHCV2jN0RKls9WMepLQ">Youtube</a>
+<a href="https://github.com/xolyn">Github</a> | 
+<a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a> | 
+<a href="https://instagram.com/toqurdn">Instagram</a> | 
+<a href="https://x.com/uygniluohz">X</a>
 <br>
 lz568[at]cornell[dot]edu
 <hr>
@@ -21,7 +22,7 @@ Cornell University
 <br>
 <small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
 <h2>CV</h2>
-<a href="[u]cv_231008.pdf" download>Download</a> (3 pages)
+<a href="[u]cv_231008.pdf" >View</a> | <a href="[u]cv_231008.pdf" download>Download</a> (3 pages)
 <hr>
 <h2>Course material:</h2>
 <br>
