--- a/index.html
+++ b/index.html
@@ -1,43 +1,56 @@
-<h1>Lingyu Zhou</h1>
-<hr>
-<a href="https://khentmt.com">KH Entertainment</a> | <a href="https://wisc.edu">UW-Madison</a> | <a href="https://cornell.edu">Cornell University</a>
-<br>
-522 Dryden Rd.
-<br>
-<a href="https://github.com/xolyn">Github</a> | 
-<a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a> | 
-<a href="https://instagram.com/toqurdn">Instagram</a> | 
-<a href="https://x.com/uygniluohz">X</a>
-<br>
-lz568[at]cornell[dot]edu
-<hr>
+<style>
 
-<!-- <b>Course notes:</b>
-<br>
-UW-Madison
-<br>
-<small>Math535</small>: <small><a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>
-<br>
-Cornell University
-<br>
-<small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
-<h2>CV</h2>
-<a href="[u]cv_231008.pdf" >View</a> | <a href="[u]cv_231008.pdf" download>Download</a> (3 pages)
-<hr>
-<h2>Course material:</h2>
-<br>
-UW-Madison
-<br>
-<ul>
-    <li><small>Math535: <a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>    </li></ul>
+    @font-face {
+        font-family: "erewhon";
+        src: url("Erewhon-Bold.pfb.ttf");
 
-Cornell University
-<br>
-<ul>
-    <li> <small>STSCI5010: <a href="https://xolyn.github.io/5010note">Note</a> </small></li> 
-    <li><small>STSCI5060: <a href="https://xolyn.github.io/5060note">Note</a></small></li> 
-</ul>
-<hr>
-This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
+}
+</style>
 
+<body style="font-family: erewhon;">
+
+    <h1>Lingyu Zhou</h1>
+        <hr>
+        <a href="https://khentmt.com">KH Entertainment</a> | <a href="https://wisc.edu">UW-Madison</a> | <a href="https://cornell.edu">Cornell University</a>
+        <br>
+        522 Dryden Rd.
+        <br>
+        <a href="https://github.com/xolyn">Github</a> | 
+        <a href="https://www.linkedin.com/in/lingyu-zhou-7280041b6/">LinkedIn</a> | 
+        <a href="https://instagram.com/toqurdn">Instagram</a> | 
+        <a href="https://x.com/uygniluohz">X</a>
+        <br>
+        lz568[at]cornell[dot]edu
+        <hr>
+
+        <!-- <b>Course notes:</b>
+        <br>
+        UW-Madison
+        <br>
+        <small>Math535</small>: <small><a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>
+        <br>
+        Cornell University
+        <br>
+        <small><a href="https://xolyn.github.io/5010note">STSCI5010</a> | <a href="https://xolyn.github.io/5060note">STSCI5060</a></small> -->
+        <h2>CV</h2>
+        <a href="[u]cv_231008.pdf" >View</a> | <a href="[u]cv_231008.pdf" download>Download</a> (3 pages)
+        <hr>
+        <h2>Course material:</h2>
+        <br>
+        UW-Madison
+        <br>
+        <ul>
+            <li><small>Math535: <a href="https://xolyn.github.io/535sp23note">Note</a></small> | <small><a href="https://xolyn.github.io/535hw9">Homework</a></small>    </li></ul>
+
+        Cornell University
+        <br>
+        <ul>
+            <li> <small>STSCI5010: <a href="https://xolyn.github.io/5010note">Note</a> </small></li> 
+            <li><small>STSCI5060: <a href="https://xolyn.github.io/5060note">Note</a></small></li> 
+        </ul>
+        <hr>
+        This website will be deprecated in the future. A more exquisite website can be accessed <a href="https://zlybox.com">here</a>.
+
+
+</body>
 <!-- <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=_Hn5KVSUvMKb0DlqWlil3k7JISD3slPy4QQCFYsbZT0"></script> -->
