--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<h1><a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
+<h1> <a href="https://github.com/xolyn">🏡</a> <a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
 
 lz568 [at] cornell [dot] com
