--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 <h1> <a href="https://github.com/xolyn">🏡</a> <a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
 
 lz568 [at] cornell [dot] com
+
+<small>
+  <a href="https://aqmn.github.io/opai">[demo1]</a> | <a href="https://aqmn.github.io/index-code.html">[demo2]</a> | 
+<a href="https://aqmn.github.io/index0">[demo3]</a>
+</small>
