--- a/index.html
+++ b/index.html
@@ -1,9 +1,40 @@
-<h1> <a href="https://github.com/xolyn">🏡</a> <a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lingyu Zhou</title>
+    <style>
+        @font-face { font-family: courier; src: url("CourierPrime-Regular.ttf"); } 
 
-lz568 [at] cornell [dot] com
+        body {
+            background-color: black;
+            color: white;
+            line-height: 1; /* Adjust line spacing */
+            letter-spacing: -1px;
+            font-family: courier;
+            font-size:5vh;
+        }
 
-<br>
-<small>
-  <a href="https://aqmn.github.io/opai">[demo1]</a> | <a href="https://aqmn.github.io/index-code.html">[demo2]</a> | 
-<a href="https://aqmn.github.io/index0">[demo3]</a>
-</small>
+        a{
+            color:blue;
+            transition: 0.5s;
+        }
+
+        a:hover{
+            color:white;
+        }
+    </style>
+</head>
+<body>
+    <h1> <a href="https://github.com/xolyn">🏡</a> <a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
+
+    lz568 [at] cornell [dot] com
+    
+    <br>
+    <small>
+      <a href="https://aqmn.github.io/opai">[demo1]</a> | <a href="https://aqmn.github.io/index-code.html">[demo2]</a> | 
+    <a href="https://aqmn.github.io/index0">[demo3]</a>
+    </small>
+</body>
+</html>
