--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             line-height: 1; /* Adjust line spacing */
             letter-spacing: -1px;
             font-family: courier;
-            font-size:3.5vh;
+            font-size:3vh;
         }
 
         a{
@@ -27,8 +27,10 @@
     </style>
 </head>
 <body>
-    <h1> <a href="https://github.com/xolyn">🏠</a> <a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
-
+    <h1> <a href="https://github.com/xolyn"> <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="2.5rem" height="2.5rem" viewBox="0,0,256,256">
+    <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(10.66667,10.66667)"><path d="M12,2.09961l-11,9.90039h3v9h7v-6h2v6h7v-9h3zM12,4.79102l6,5.40039v0.80859v8h-3v-6h-6v6h-3v-8.80859z"></path></g></g>
+    </svg></a><a href="https://zhoulingyu.net">Lingyu Zhou</a></h1>
+    
     lz568 [at] cornell [dot] com
     
     <br>
