--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ footer{
     </small>
 
     <hr width="80%;" color="black" size="3" style="margin-top: 30px;">
-    <p style="font-family: neueb;">The fusion of abstraction and contemporary aesthetic purposes.</p>
+    <p style="font-family: neueb;">The fusion of abstract expressionism and contemporary aesthetic purposes.</p>
     
 
 </div>
