--- a/ft.html
+++ b/ft.html
@@ -1,4 +1,6 @@
 <head>
+    <meta charset="UTF-8">
+    <title>Files</title>
     <style>
         body{
             font-family: consolas;
@@ -48,7 +50,7 @@ ul[role="tree"] li {
 [role="treeitem"][aria-expanded="false"] > span::before {
   font-family: "Font Awesome 5 Free";
   /* content: "🗀"; */
-  content: "🗀";
+  content: "＞";
   display: inline-block;
   padding-right: 3px;
   vertical-align: middle;
@@ -57,7 +59,7 @@ ul[role="tree"] li {
 
 [role="treeitem"][aria-expanded="true"] > span::before {
   font-family: "Font Awesome 5 Free";
-  content: "🗀";
+  content: "∨";
   display: inline-block;
   padding-right: 3px;
   vertical-align: middle;
