--- a/ft.html
+++ b/ft.html
@@ -33,7 +33,8 @@ ul[role="tree"] li {
 [role="treeitem"].doc::before {
   font-family: "Font Awesome 5 Free";
   /* content: "\f15c"; */
-  content: "🗎";
+/*   content: "🗎"; */
+  content: "📄";
   display: inline-block;
   padding-right: 2px;
   padding-left: 5px;
@@ -50,7 +51,7 @@ ul[role="tree"] li {
 
 [role="treeitem"][aria-expanded="false"] > span::before {
   font-family: "Font Awesome 5 Free";
-  /* content: "🗀"; */
+  /* content: "📁"; */
   content: "🗀";
   display: inline-block;
   padding-right: 3px;
@@ -60,7 +61,7 @@ ul[role="tree"] li {
 
 [role="treeitem"][aria-expanded="true"] > span::before {
   font-family: "Font Awesome 5 Free";
-  content: "🗀";
+  content: "📂";
   display: inline-block;
   padding-right: 3px;
   vertical-align: middle;
