--- a/ft.html
+++ b/ft.html
@@ -51,8 +51,8 @@ ul[role="tree"] li {
 
 [role="treeitem"][aria-expanded="false"] > span::before {
   font-family: "Font Awesome 5 Free";
-  /* content: "📁"; */
-  content: "🗀";
+  content: "📁";
+/*   content: "🗀"; */
   display: inline-block;
   padding-right: 3px;
   vertical-align: middle;
