--- a/ft.html
+++ b/ft.html
@@ -2,8 +2,9 @@
     <meta charset="UTF-8">
     <title>Files</title>
     <style>
+            @font-face { font-family: code; src: url("fonts/CascadiaMono-Regular.ttf"); } 
         body{
-            font-family: consolas;
+            font-family: code;
             line-height: 0.7;
             font-size: calc(1vh + 1.5vw);
         }
