--- a/ft.html
+++ b/ft.html
@@ -112,7 +112,7 @@ li{
 <body>
 
 
-    <h3 id="tree_label">Document</h3>
+    <h3 id="tree_label">Files</h3>
 <ul role="tree" aria-labelledby="tree_label">
   <li role="treeitem" aria-expanded="false" aria-selected="false">
     <span> Projects </span>
