--- a/ft.html
+++ b/ft.html
@@ -13,7 +13,7 @@
   margin: 0;
   padding: 0;
   list-style: none;
-  font-size: 120%;
+  /* font-size: 120%; */
 }
 
 ul[role="tree"] li {
@@ -101,10 +101,7 @@ ul[role="tree"] li {
   border-left: 5px solid #333;
 }
 
-li{
-    max-width: 100%;
-    width: 90%;
-}
+
     </style>
 
 </head>
@@ -115,21 +112,22 @@ li{
     <h3 id="tree_label">Files</h3>
 <ul role="tree" aria-labelledby="tree_label">
   <li role="treeitem" aria-expanded="false" aria-selected="false">
-    <span> Projects </span>
+    <span> UW-Madison </span>
     <ul role="group">
-      <li role="treeitem" aria-selected="false" class="doc">project-1.docx</li>
-      <li role="treeitem" aria-selected="false" class="doc">project-2.docx</li>
+      <!-- <li role="treeitem" aria-selected="false" class="doc">project-1.docx</li>
+      <li role="treeitem" aria-selected="false" class="doc">project-2.docx</li> -->
+      <a href="#"><li role="treeitem" aria-selected="false" class="doc">Transcript.pdf</li></a>
       <li role="treeitem" aria-expanded="false" aria-selected="false">
-        <span> Project 3 </span>
+        <span> MATH535 </span>
         <ul role="group">
           <li role="treeitem" aria-selected="false" class="doc">project-3A.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">project-3B.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">project-3C.docx</li>
         </ul>
       </li>
-      <li role="treeitem" aria-selected="false" class="doc">project-4.docx</li>
+
       <li role="treeitem" aria-expanded="false" aria-selected="false">
-        <span> Project 5 </span>
+        <span> ECON 400 </span>
         <ul role="group">
           <li role="treeitem" aria-selected="false" class="doc">project-5A.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">project-5B.docx</li>
@@ -142,10 +140,10 @@ li{
     </ul>
   </li>
   <li role="treeitem" aria-expanded="false" aria-selected="false">
-    <span> Reports </span>
+    <span> Cornell </span>
     <ul role="group">
       <li role="treeitem" aria-expanded="false" aria-selected="false">
-        <span> report-1 </span>
+        <span> BIOCB 6381 </span>
         <ul role="group">
           <li role="treeitem" aria-selected="false" class="doc">report-1A.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">report-1B.docx</li>
@@ -153,7 +151,7 @@ li{
         </ul>
       </li>
       <li role="treeitem" aria-expanded="false" aria-selected="false">
-        <span> report-2 </span>
+        <span> STSCI 5160 </span>
         <ul role="group">
           <li role="treeitem" aria-selected="false" class="doc">report-2A.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">report-2B.docx</li>
@@ -162,7 +160,7 @@ li{
         </ul>
       </li>
       <li role="treeitem" aria-expanded="false" aria-selected="false">
-        <span> report-3 </span>
+        <span> CS 5780 </span>
         <ul role="group">
           <li role="treeitem" aria-selected="false" class="doc">report-3A.docx</li>
           <li role="treeitem" aria-selected="false" class="doc">report-3B.docx</li>
@@ -172,7 +170,7 @@ li{
       </li>
     </ul>
   </li>
-  <li role="treeitem" aria-expanded="false" aria-selected="false">
+  <!-- <li role="treeitem" aria-expanded="false" aria-selected="false">
     <span> Letters </span>
     <ul role="group">
       <li role="treeitem" aria-expanded="false" aria-selected="false">
@@ -202,7 +200,7 @@ li{
         </ul>
       </li>
     </ul>
-  </li>
+  </li> -->
 </ul>
 
         
