--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ footer{
   bottom: 1vh;  */
   bottom: 1vh;
     position: fixed;
-    width: 100%;
+    width: 100vw;
   text-align: center;
   font-size: 2.2vh;
   font-family: sf;
@@ -65,8 +65,8 @@ footer{
     
     <br>
     <small>
-      <a href="https://aqmn.github.io/opai">[demo1]</a> | <a href="https://aqmn.github.io/index-code.html">[demo2]</a> | 
-    <a href="https://aqmn.github.io/index0">[demo3]</a> | <a href="https://aqmn.github.io/comm.html">[demo4]</a>
+      <a href="https://aqmn.github.io">[demo1]</a> | <a href="https://aqmn.github.io/index-code">[demo2]</a> | 
+    <a href="https://aqmn.github.io/index0">[demo3]</a> | <a href="https://aqmn.github.io/comm1">[demo4]</a>
     </small>
 
     <hr width="80%;" color="black" size="3" style="margin-top: 30px;">
