--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@ footer{
 
 
 </body>
-<footer>© Lingyu Zhou.</footer>
+<footer>Powered by Lingyu Zhou, under license to  <a href="https://khentmt.com">KH Entertainment 
+        <!-- <svg xmlns="http://www.w3.org/2000/svg" width="1.1rem" height="1.1rem" fill="currentColor" class="bi bi-arrow-up-right" viewBox="0 0 16 16"> <path fill-rule="evenodd" d="M14 2.5a.5.5 0 0 0-.5-.5h-6a.5.5 0 0 0 0 1h4.793L2.146 13.146a.5.5 0 0 0 .708.708L13 3.707V8.5a.5.5 0 0 0 1 0v-6z"/> </svg>  -->
+    </a> © (2012-2023) All rights reserved.</footer>
 <!-- <footer>© Lingyu Zhou <a href="https://khentmt.com">KH Entertainment</a>.</footer> -->
 </html>
