--- a/index.html
+++ b/index.html
@@ -124,6 +124,11 @@ footer{
   border-width: 2px;
   border-style: solid;
 }
+
+.nondec::after {
+  text-decoration: none;
+}
+
 </style>
 </head>
 
@@ -148,13 +153,17 @@ footer{
     lz568 [at] cornell [dot] com
     
     <br>
+    <br>
     <small>
 
-      <a href="https://aqmn.github.io">[demo1]</a> | <a href="https://aqmn.github.io/index-code">[demo2]</a> | 
+      <a href="https://aqmn.github.io/guess">[Fun]</a>  | <a href="https://aqmn.github.io">[demo1]</a> | <a href="https://aqmn.github.io/index-code">[demo2]</a> | 
     <a href="https://aqmn.github.io/index0">[demo3]</a> | <a href="https://aqmn.github.io/comm2">[demo4]</a> |         <div class="tooltip"><a class="" href="https://aqmn.github.io/cmd">[demo5<sup>&beta;</sup>]</a>
         <span class="tooltiptext">Check out my creative CLI website!</span>
       </div>
-    </small>
+<br>
+<!-- <a class="nondec" href="https://aqmn.github.io"><button style="border: solid black 1px; border-radius: 999px; padding: .2vh 1vw .2vh 1vw; background-color:transparent;margin-top: 1vh;font-family: neueb"> FUN</button></a> -->
+ 
+</small>
 
     <hr width="80%;" color="black" size="3" style="margin-top: 30px;">
     <p style="font-family: neueb;">The fusion of abstract expressionism and contemporary aesthetic purposes.</p>
