--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         margin-right: 10vw;
         padding-top: 20vh;
         font-size: xx-small;
-        font-family: 'Courier New', Courier, monospace;
+        font-family: cour;
         letter-spacing: -.3px;
     }
        
