--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 <footer>
     <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
     <div style="display: inline-block;">
-     
+     /<a href="https://xolyn.github.io">home</a>/
     </div>
     <div  style="display: inline-block;">
-        <b>EN</b>/CN/KR
+<!--         <b>EN</b>/CN/KR -->
     </div>
     </div>
     </footer>
