--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 <body>
     
-    <a href="simple.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p></a>
+    <a href="simplefor.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p></a>
 <!-- <a href="simple.html">Lingyu Zhou</a> -->
 <b>Lingyu Zhou</b>
 
