--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
      /<a href="https://xolyn.github.io">home</a>/
     </div>
     <div  style="display: inline-block;">
+        <a href="https://aqmn.github.io/sponsor">$</a>
 <!--         <b>EN</b>/CN/KR -->
     </div>
     </div>
