--- a/simplefor.html
+++ b/simplefor.html
@@ -68,7 +68,7 @@
 <footer>
     <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
     <div style="display: inline-block;">
-     /<a href="https://xolyn.github.io">home</a>/about
+     <a href="https://aqmn.github.io/sponsor">$</a>/<a href="https://xolyn.github.io">home</a>/about
     </div>
     <div  style="display: inline-block;">
 
