--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         font-size: x-small;
         font-family: cour;
         letter-spacing: -.3px;
+        padding-bottom:20vh;
     }
        
     a{
