--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="https://aqmn.github.io/logo.png" type="image/png">
+    <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
     <style>
-        @font-face { font-family: cour; src: url("fonts/cour.ttf"); } 
+        @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+        /* @font-face { font-family: cour; src: url("fonts/cour.ttf"); }  */
     body{
         text-align: left;
         margin-left: 10vw;
         margin-right: 10vw;
         padding-top: 20vh;
         font-size: x-small;
-        font-family: cour;
+        /* font-family: cour; */
+        font-family:"Courier Prime", monospace;
         letter-spacing: -.3px;
         padding-bottom:20vh;
     }
