--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         margin-left: 10vw;
         margin-right: 10vw;
         padding-top: 20vh;
-        font-size: x-small;
+        font-size: small;
         /* font-family: cour; */
         font-family:"Courier Prime", monospace;
         letter-spacing: -.3px;
