--- a/simplefor.html
+++ b/simplefor.html
@@ -50,12 +50,12 @@
 
 <b>Lingyu Zhou</b>
 
-<p>I have deliberately made this website, 
-    eschewing extravagant styles and superfluous functionalities, 
+<p>I deliberately made this website.
+    Eschewing extravagant styles and superfluous functionalities, 
     with the fundamental belief that a website serves as a conduit for efficient information dissemination. 
-    By adhering to simplicity, I aim to optimize accessibility across a diverse spectrum of computing platforms, 
+    By adhering to simplicity, I aim to optimize accessibility among as more number of computers as possible, 
     including those with modest hardware specifications. 
-    This deliberate design choice is underpinned by a profound recognition of the ubiquitous nature of information consumption in the digital age.
+    This peculiar design choice is underpinned by a profound recognition of the ubiquitous nature of information consumption in the digital age.
      Recognizing the vast array of devices and varying technological capabilities employed by users worldwide,
       I have endeavored to create an interface that transcends the boundaries of technological disparity, 
       ensuring seamless access to content across a broad spectrum of computing environments. 
