--- a/simplefor.html
+++ b/simplefor.html
@@ -48,7 +48,7 @@
     <!-- <a href="simple.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p></a> -->
     <p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p>
 
-<b>Lingyu Zhou</b>
+<b>about</b>
 
 <p>I deliberately made this website.
     Eschewing extravagant styles and superfluous functionalities, 
