--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
 <p><a href="https://khentmt.com">Founder</a> and <a href="https://cornell.edu">student</a>, exploring the numbers and the connections behind. Crafting insightful data narratives from complex systems by blending applied mathematics and computer science technology.</p>
 
-<p><a   href=mailto:admin@zhoulingyu.net>e-mail</a> 
-    / <a href=https://zhoulingyu.net/files/cv.pdf>résumé</a> 
+<p><a   href=mailto:lz568@cornell.edu>e-mail</a> 
+    / <a href=https://https://f.xoy.one/cv.pdf>résumé</a> 
     / <a href=https://www.linkedin.com/in/lingyuzhou>linkedin</a> 
     / <a href=https://instagram.com/toqurdn>instagram</a> 
     / <a href=https://github.com/xolyn>github</a> 
