--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         font-size: small;
         /* font-family: cour; */
         font-family:"Courier Prime", monospace;
-        letter-spacing: -.3px;
+        letter-spacing: -.5px;
         padding-bottom:20vh;
     }
        
@@ -48,7 +48,7 @@
 <p><a href="https://khentmt.com">Founder</a> and <a href="https://cornell.edu">student</a>, exploring the numbers and the connections behind. Crafting insightful data narratives from complex systems by blending applied mathematics and computer science technology.</p>
 
 <p><a   href=mailto:lz568@cornell.edu>e-mail</a> 
-    / <a href=https://https://f.xoy.one/cv.pdf>résumé</a> 
+    / <a href=https://f.xoy.one/cv.pdf>résumé</a> 
     / <a href=https://www.linkedin.com/in/lingyuzhou>linkedin</a> 
     / <a href=https://instagram.com/toqurdn>instagram</a> 
     / <a href=https://github.com/xolyn>github</a> 
