--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <footer>
     <div style="display: flex; justify-content: space-between; width: 80vw;  margin: 0 auto; padding: auto;">
     <div style="display: inline-block;">
-     <a href="https://aqmn.github.io/sponsor">$</a>/<a href="https://xolyn.github.io">home</a>/
+     <a href="https://aqmn.github.io/give">$</a>/<a href="https://xolyn.github.io">home</a>/
     </div>
     <div  style="display: inline-block;">
         
