--- a/proj.html
+++ b/proj.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projects</title>
     <style>
+        @font-face { font-family: soh; src: url("fonts/sohne.otf"); } 
+        @font-face { font-family: sig; src: url("fonts/sig.otf"); } 
     body{
         padding-bottom: 10vh;
+        font-family:soh;
     }
         .proj {
     display: flex;
@@ -78,7 +81,7 @@
     </style>
 </head>
 <body>
-    <p style="font-size: xx-large; padding-left: 5vw;">projects</p>
+    <p style="font-size: xx-large; font-family:sig; padding-left: 5vw;">projects</p>
 
     <div class="proj" style="padding-bottom: 10vh;">
         <div class="thumbnail">
