--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
     / <a href=https://weibo.com/u/5663761733>weibo</a>
 </p>
     
-<p><a href="https://aqmn.github.io/guess">fun></a><br>
+<p><a href="https://aqmn.github.io/proj">projects></a><br>
+    <a href="https://aqmn.github.io/guess">fun></a><br>
     <a href="https://aqmn.github.io">demo1></a><br>
     <a href="https://aqmn.github.io/index-code">demo2></a><br>
     <a href="https://aqmn.github.io/index0">demo3></a><br>
