--- a/proj.html
+++ b/proj.html
@@ -106,7 +106,7 @@
         </div>
         <div class="desc">
             <p style="font-size: large;">CLI personal webpage</p>
-            Tired of traditional graphic UX? Step into the realm of my personal website, where the digital canvas morphs into a CLI, 
+            Tired of traditional graphic UX? Step into the realm of binary strings, where the CLI morphs into a digital canvas, 
             echoing the rhythmic cadence of terminal commands!
             <!-- Here, the keystrokes replace brushstrokes, painting a tapestry of information and discovery.  -->
             Embark on a journey where every command unlocks hidden treasures, revealing surprises that dance beneath the surface. 
