--- a/proj.html
+++ b/proj.html
@@ -95,7 +95,7 @@
             Try beamer2ppt, a python script converting LaTeX beamer in <code>.pdf</code> file to <code>.ppt</code> / <code>.pptx</code> file, perfectly maintaining formulae and slides formatting.
             <br>
             <br>
-            <a style="font-size: small;" href="https://github.com/xolyn/beamer2ppt">Learn more</a>
+            <a style="font-size: small;" href="https://github.com/xolyn/beamer2ppt">Explore</a>
         </div>
     </div>
 
@@ -114,7 +114,7 @@
             Welcome to a world where interaction transcends convention, inviting you to explore, learn, and delight in the artistry of the CLI. -->
             <br>
             <br>
-            <a style="font-size: small;" href="https://aqmn.github.io/cmd">Learn more</a>
+            <a style="font-size: small;" href="https://aqmn.github.io/cmd">Explore</a>
 
         </div>
     </div>
