--- a/fg.html
+++ b/fg.html
@@ -123,7 +123,7 @@
 <body>
   <p style="font-size: 8vw; margin: 8vh 0 0; padding-left: 6vw; font-family: sig;">font gallery</p>
   <div class="cover">
-    <button class="left" onclick="leftScroll()">
+    <button style="z-index: 999999;" class="left" onclick="leftScroll()">
       <i class="fas fa-angle-double-left"></i>
     </button>
     <div class="scroll-images">
@@ -150,7 +150,7 @@
       
 
     </div>
-    <button class="right" onclick="rightScroll()">
+    <button style="z-index: 999999;" class="right" onclick="rightScroll()">
       <i class="fas fa-angle-double-right"></i>
     </button>
   </div>
