--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
 </p>
     
 <p><a href="https://xolyn.github.io/proj">projects></a><br>
+    <a href="fg.html">font gallery></a><br>
     <a href="https://aqmn.github.io/guess">fun></a><br>
     <a href="https://aqmn.github.io">demo1></a><br>
     <a href="https://aqmn.github.io/index-code">demo2></a><br>
     <a href="https://aqmn.github.io/index0">demo3></a><br>
     <a href="https://aqmn.github.io/comm2">demo4></a><br>
-    <a class="" href="https://aqmn.github.io/cmd">demo5(beta)></a></p>
+    <!-- <a class="" href="https://aqmn.github.io/cmd">demo5(beta)></a></p> -->
 
 </body>
 <footer>
