--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <title>Lingyu Zhou</title>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1.0, user-scalable=no">
     <link rel="icon" href="https://f.xoy.one/assets/logo.png" type="image/png">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
@@ -17,6 +17,10 @@
         font-family:"Courier Prime", monospace;
         letter-spacing: -.5px;
         padding-bottom:20vh;
+    }
+
+    .disable-dbl-tap-zoom {
+    touch-action: manipulation;
     }
        
     a{
@@ -40,7 +44,7 @@
     </style>
 </head>
 
-<body>
+<body class="disable-dbl-tap-zoom">
     <a href="simplefor.html"><p style="background: black; width: min-content;color: white; padding: 3px 6px 3px 6px;">Z</p></a>
 <!-- <a href="simple.html">Lingyu Zhou</a> -->
 <b>Lingyu Zhou</b>
