--- a/fg.html
+++ b/fg.html
@@ -38,6 +38,7 @@
 
     .left {
       position: absolute;
+      touch-action: manipulation;
       left: 0;
       top: 50%;
       transform: translateY(-50%);
@@ -45,6 +46,7 @@
 
     .right {
       position: absolute;
+      touch-action: manipulation;
       right: 0;
       top: 50%;
       transform: translateY(-50%);
